# Laboratory-

./: .dockerignore  .editorconfig  .env  .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .vercelignore  BUILD_ANDROID.md  BUILD_WINDOWS_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  HUMANS.txt  LICENSE  README.md  README_BUILD.md  ROADMAP.md  SECURITY.md  add_root_deps.ts  apply_fix_root.ts  apply_ultra_safe.ts  architecture_diagram.mmd  build-status.txt  build_errors.txt  build_project.sh  build_windows.bat  build_windows.sh  capacitor.config.json  capacitor.config.ts  check-93a8484.cjs  check-any-commit.cjs  check-commit-date.cjs  check-gitignore.cjs  check-head-commit.cjs  (+102 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: android.yml  build-android.yml  build-apps.yml  build-windows.yml  ci.yml  codeql-analysis.yml  deploy.yml  release.yml  windows.yml
android/: build.gradle  gradle.properties  init.gradle
android/app/: build.gradle  (+1 more)
assets/: index.ts
e2e/: basic.spec.ts
electron/: main.cjs  main.js
prisma/: schema.prisma
public/: .htaccess  browserconfig.xml  manifest.json  robots.txt  sitemap.xml  version.json
scripts/: backup-database.ts  migrate-database.ts  restore-database.ts  seed-database.ts
src/: App.tsx  auth.ts  data.ts  global.d.ts  index.css  main.tsx  translations.ts  types.ts  vite-env.d.ts
supabase/: config.toml
(+98 files in other folders)
